styles/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-size: 16px;
    font-family: Roboto, Arial, sans-serif;
}

main{
    grid-column: 2/3;
    margin: 1rem;
}

nav {
    background-color: steelblue;
    padding: 1rem;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

nav a {
    display: block;
    padding: .5rem;
    text-decoration: none;
    font-size: 1.2rem;
    font-weight: 700;
    color: white;
    
}

aside {
    width: 20em;
    text-align: center;
    position: relative;
    grid-column: 1/2;
    grid-row: 1/2;
}

aside img {
    width: 200px;
    height: auto;
}

aside h2 {
    position: absolute;
    top: 15px;
    left: 120px;
}

h1 {
    color: teal;
    padding: .5rem;
    border-bottom: 1px solid teal;
}

main img {
    width: 150px;
    height: auto;
    border: 1px solid teal;
    padding: 2px;
    box-shadow: 0 0 30px gray;
    float: right;
    margin: 0 0 1rem 1rem;
}

p {
    margin: 1rem;
}

header, .grid, footer {
    max-width: 840px;
    margin: 0 auto;
}

footer{
    border-top: 1px solid teal;
}

/* Class Selectors */

.box {
    margin: 1rem;
    border: 1px solid rgba(0,0,0,.1);
    padding: 1rem;
    background-color: #ddd;
    color: #000;
}

.indent {
    padding-left: 2rem;
}

.grid{
    display: grid;
    align-items: center;
}

